# smartstepper

./: west.yml
app/: CMakeLists.txt  debug.conf  logging.conf  nucleo_g474re.overlay  nucleo_h753zi.overlay  prj.conf  rtt.conf  sample.yaml  smartstepper.overlay  smartstepper_v2.overlay
app/boards/: nucleo_h753zi.overlay  smartstepper.conf  smartstepper.overlay  smartstepper_v2.conf  smartstepper_v2.overlay
app/include/: angle_gen.h  angle_observer.h  config.h  filter_fo.h  motor_control_api.h  motor_events.h  motor_hardware.h  motor_isr.h  motor_math.h  motor_states.h  pi.h  pwmgen.h  rs_online.h  shell_commands.h  traj.h
app/snippets/rtt-shell/: README.rst  rtt-shell.conf
app/snippets/serial-shell/: README.rst  snippet.yml
app/src/: angle_observer.c  config.c  main.c  motor_control_api.c  motor_hardware.c  motor_isr.c  motor_states.c  rs_online.c  shell_commands.c
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  adc_stm32.c  adc_stm32_injected.c
drivers/gate_driver/: CMakeLists.txt  Kconfig  Kconfig.drv8328  ti_drv8328.c
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.stm32  mcpwm_stm32.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/spi/: CMakeLists.txt  Kconfig.stm32  spi_context.h  spi_ll_stm32.c  spi_ll_stm32.h
drivers/spi_tt/: CMakeLists.txt  Kconfig  Kconfig.stm32  spi_ll_stm32_tt.c  spi_ll_stm32_tt.h  spi_timer_dma.overlay  spi_timer_dma_example.c
drivers/timer_ic/: CMakeLists.txt  Kconfig  Kconfig.stm32  timer_ic_stm32.c
dts/bindings/: rubus,angle-observer.yaml  rubus,current-sense.yaml  rubus,vbus-sense.yaml  (+6 more)
(+59 files in other folders)
